# dynamic_static.graphics

./: .gitignore  .gitmodules  BuildExternalProject.cmake  BuildExternalProject_Build.CMakeLists.cmake.in  BuildExternalProject_Unpackage.CMakeLists.cmake.in  CMakeLists - Copy.txt  CMakeLists-old.txt  CMakeLists.txt  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  DownloadProject_ex.cmake  Doxyfile  Dynamic_Static_ex.cmake  LICENSE  README.md  generator.cpp
Dynamic_Static.Graphics/: CMakeLists.txt
Dynamic_Static.Graphics.Application/: CMakeLists.txt
Dynamic_Static.Graphics.Application/source/: Main.cpp
Dynamic_Static.Graphics.Tests/: CMakeLists.txt
Dynamic_Static.Graphics/include/Dynamic_Static/Graphics/: Defines.hpp  Object.hpp
Dynamic_Static.Graphics/source/Dynamic_Static/Graphics/: Object.cpp
examples/: CMakeLists.txt  VK.00.PhysicalDevice.cpp  VK.01.Triangle.cpp  VK.02.VertexBuffer.cpp  VK.03.UniformBuffer.cpp  VK.04.TextureMapping.cpp  VK.05.DepthBuffering.cpp  VK.06.OffscreenRendering.cpp  VK.07.ComputeFluid2D.cpp
examples.ex/: CMakeLists.txt  Sandbox.cpp  Vk.00.PhysicalDevice.cpp  Vk.01.Triangle.cpp  Vk.02.VertexAndIndexBuffers.cpp  Vk.03.UniformBuffer.cpp  Vk.04.PushConstants.cpp  Vk.05.TextureMapping.cpp  Vk.06.DepthBuffering.cpp  Vk.07.OffScreenRendering.cpp  Vk.08.TextRendering.cpp  triangle.cpp  vk.01.triangle.cpp  vk.02.vertex-buffer.cpp  vk.03.uniform-buffer.cpp  vk.04.texture-mapping.cpp  vk.05.depth-buffering.cpp  vk.06.gltf.cpp
examples.ex/Vk.ShapeBlaster/: BlackHole.hpp  Bullet.hpp  CMakeLists.txt  Enemy.Spawner.hpp  Entity.Manager.hpp  Entity.hpp  Grid.hpp  Player.hpp  Sprite.Pipeline.hpp  Sprite.Pool.hpp  Sprite.cpp  Sprite.hpp  Vk.ShapeBlaster.Main.cpp
examples.ex/Vk.ShapeBlaster/include/ShapeBlaster/: BlackHole.hpp  Bullet.hpp  Enemy.Spawner.hpp  Enemy.hpp  Entity.Component.System.hpp  Entity.Component.hpp  Entity.Manager.hpp  Entity.Spawner.hpp  Entity.hpp  Grid.hpp  Player.hpp  Pool.hpp  ScoreBoard.hpp  Seeker.hpp  Sprite.Pool.hpp  Wanderer.hpp
examples.ex/Vk.ShapeBlaster/source/ShapeBlaster/: Entity.cpp  Sprite.cpp  Vk.ShapeBlaster.Main.cpp
examples.ex/common/: common.hpp
examples/VK.00.PhysicalDevice/: CMakeLists.txt
examples/VK.00.PhysicalDevice/source/: Main.cpp
examples/VK.01.Triangle/: CMakeLists.txt
examples/VK.01.Triangle/source/: Main.cpp
examples/VK.02.VertexBuffer/: CMakeLists.txt
examples/VK.02.VertexBuffer/source/: Main.cpp
examples/VK.03.UniformBuffer/: CMakeLists.txt
examples/VK.03.UniformBuffer/source/: Main.cpp
examples/VK.04.TextureMapping/: CMakeLists.txt
examples/VK.04.TextureMapping/source/: Main.cpp
examples/VK.05.DepthBuffering/: CMakeLists.txt
examples/VK.05.DepthBuffering/source/: Main.cpp
examples/VK.06.OffscreenRendering/: CMakeLists.txt
examples/VK.06.OffscreenRendering/source/: Main.cpp
examples/VK.06.glTF/: CMakeLists.txt
examples/VK.06.glTF/source/: Main.cpp
examples/VK.07.Compute/: CMakeLists.txt
examples/VK.07.Compute/source/: Main.cpp
examples/VK.07.ComputeFluid2D/: CMakeLists.txt  ComputePipeline.hpp  ComputeSurface.hpp  Main.cpp
examples/VK.07.ShapeBlaster/: CMakeLists.txt
examples/VK.07.ShapeBlaster/source/: Art.hpp  BlackHole.hpp  Bloom.hpp  BloomComponent.hpp  BloomSettings.hpp  Bullet.hpp  Cursor.hpp  Enemy.Spawner.hpp  Enemy.hpp  Entity.Manager.hpp  Entity.hpp  Game.Status.hpp  Game.hpp  Main.cpp  Main_ex.hpp  PlayerShip.hpp  Resources.hpp  Seeker.hpp  Sound.hpp  SpritePool.hpp  TinySoundInclude.hpp  Wanderer.hpp
examples/VK.07.ShapeBlaster/source/Ex/: BlackHole_ex.hpp  Bullet_ex.Manager.hpp  Bullet_ex.hpp  Enemy_ex.hpp  Entity_ex.Manager.hpp  Entity_ex.Pool.hpp  Entity_ex.Spawner.hpp  Entity_ex.hpp  Main_ex.hpp  PlayerShip_ex.hpp  Player_ex.hpp  Pool_ex.hpp  Seeker_ex.hpp  Sprite_ex.Manager.hpp  Sprite_ex.Pipeline.hpp  Sprite_ex.Pool.hpp  Sprite_ex.hpp  Wanderer_ex.hpp
examples/VK.08.ShapeBlaster/: CMakeLists.txt
examples/VK.08.ShapeBlaster/source/: BlackHole.cpp  BlackHole.hpp  BlackHole_ex.hpp  BloomSettings.hpp  Bullet.hpp  Bullet_ex.hpp  Cursor.hpp  Enemy.Spawner.hpp  Enemy.hpp  Enemy_ex.hpp  Entity.Manager.hpp  Entity.hpp  Entity_ex.Manager.hpp  Entity_ex.Spawner.hpp  Entity_ex.hpp  Game.hpp  Main.cpp  Main_ex.hpp  PlayerShip.hpp  Player_ex.hpp  Resources.hpp  Seeker_ex.hpp  Sprite_ex.Pipeline.hpp  Sprite_ex.Pool.hpp  Sprite_ex.hpp  TinySoundInclude.cpp  Wanderer.hpp  Wanderer_ex.hpp  tinysound.h
examples/VK.08.ShapeBlaster/source/Ex/: BlackHole_ex.hpp  Enemy_ex.hpp  Entity_ex.Manager.hpp  Entity_ex.hpp  Main_ex.hpp  Player_ex.hpp  Pool_ex.hpp  Seeker_ex.hpp  Wanderer_ex.hpp
examples/VulkanTriangle/: CMakeLists.txt
examples/VulkanTriangle/source/: Main.cpp
examples/resources/: .gitignore
examples/resources/glTF/cudillero_diorama_bake/: AUTHOR  scene.gltf  scene.gltf.out
sandbox/: CMakeLists.txt
sandbox/source/: Main.cpp
source/: CMakeLists.txt
source/Dynamic_Static/Core/: GLFWInclude.hpp  Input.Manager.cpp  Input.cpp  Keyboard.cpp  Mouse.cpp  Point.cpp  Resolution.cpp  Window.cpp
source/Dynamic_Static/Graphics/: Application.cpp  Camera.Controller.cpp  Camera.cpp  FreeCameraController.cpp  GLFWInclude.hpp  GLTFCache.cpp  GLTFReader.cpp  ImageCache.cpp  ImageReader.cpp  Monitor.cpp  Object.cpp  Resolution.cpp  StbImageInclude.cpp  StbImageInclude.hpp  TinyGLTFInclude.cpp  TinyGLTFInclude.hpp  Window.cpp
source/Dynamic_Static/Graphics/Vulkan/: Application.cpp  Buffer.cpp  Command.Buffer.cpp  Command.Pool.cpp  Command.cpp  DebugReport.cpp  Descriptor.Pool.cpp  Descriptor.Set.Layout.cpp  Descriptor.Set.cpp  Device.cpp  DeviceChild.cpp  Effect.cpp  Framebuffer.cpp  Image.View.cpp  Image.cpp  IndexBuffer.cpp  Instance.cpp  Memory.cpp  Mesh.cpp  PhysicalDevice.cpp  Pipeline.Layout.cpp  Pipeline.cpp  Queue.cpp  RenderPass.cpp  RenderTarget.cpp  Sampler.cpp  Semaphore.cpp  (+7 more)
tests/: CMakeLists.txt  Dummy.Tests.cpp  comparison-operators.tests.cpp  randomize-structure.hpp  structure-copy-tests.cpp  structure-copy.tests.cpp  structure-to-tuple.tests.cpp
tests/source/: Main.cpp
tools/vk-xml-parser/: CMakeLists.txt
(+278 files in other folders)
