
# CMake configuration for Dynamic_Static.Graphics.Examples

add_subdirectory(VK.00.PhysicalDevice/)
add_subdirectory(VK.01.Triangle/)
add_subdirectory(VK.02.VertexBuffer/)
add_subdirectory(VK.03.UniformBuffer/)
add_subdirectory(VK.04.TextureMapping/)
add_subdirectory(VK.05.DepthBuffering/)
add_subdirectory(VK.06.OffscreenRendering/)
add_subdirectory(VK.07.ShapeBlaster/)
