
# TODO : DRY CMakeLists for individual examples...
add_subdirectory(VK.00.PhysicalDevice/)
add_subdirectory(VK.01.Triangle/)
add_subdirectory(VK.02.VertexBuffer/)
add_subdirectory(VK.03.UniformBuffer/)
add_subdirectory(VK.04.TextureMapping/)
add_subdirectory(VK.05.DepthBuffering/)
add_subdirectory(VK.06.OffscreenRendering/)
add_subdirectory(VK.07.Compute/)
add_subdirectory(VK.08.ShapeBlaster/)
